8373723: Deadlock with JvmtiTagMap::flush_object_free_events()